text button overflow fixed

--- a/public/src/about.css
+++ b/public/src/about.css
@@ -59,14 +59,9 @@
     padding: 10px;
   }
   .btn {
-    min-width: 20px;
     display: flex;
-    padding-right: 35px;
     align-items: center;
     font-size: 0.555rem;
-  }
-  .btn-container {
-    /* display: block; */
   }
 }
 
@@ -75,11 +70,8 @@
     visibility: hidden;
     opacity: 0;
     z-index: -999;
-    /* padding: 0;
-    margin: 0; */
   }
   .btn-container {
-    /* display: none; */
     justify-content: space-between;
   }
   .about-center {
@@ -124,7 +116,6 @@
   border-top-left-radius: var(--radius);
   border-top-right-radius: var(--radius);
   display: flex;
-  justify-content: center;
   padding-top: 6px;
   margin-bottom: 10px;
 }
